# e2e-loop-engineering

./: .gitignore  .npmrc  CLAUDE.md  MANIFEST.in  README.md  changlog.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.changeset/: fix-doctor-target-project-mode.md  fix-task-plan-yaml-parse-diagnostics.md  p1-cc-adapter.md  p2-oc-adapter.md  p3-oc-plugin.md  p4-ssot-ts.md  p5-m7-runtime-cli.md  p6-worktree-only-isolation.md
core/: README.md  coordinator.md  manifest.json
docs/: loop-engineering-collaborative-design.md  loop-engineering-cross-host-design.md  loop-engineering-detailed-implementation-design.md  loop-engineering-master-prompt.md  loop-engineering-prompts.md
loop_engineering/: __init__.py  claude_assets.py  cli.py  settings.json
tests/: conftest.py  test_ac_index.py  test_actual_writes.py  (+25 more)
tests-ts/: README.md  actual_writes.test.ts  adapter_package_exports.test.ts  cli_doctor.test.ts  cli_help.test.ts  cli_hook_command.test.ts  cli_resume.test.ts  cli_runs_overview.test.ts  cli_worktree_gate.test.ts  cli_worktree_seq.test.ts  collect_harness_internal_filter.test.ts  cross_host_consistency.test.ts  fixtures_smoke.test.ts  guard_anchors.test.ts  guard_paths.test.ts  guard_paths_writer_identity.test.ts  harness.test.ts  harness_paths.test.ts  hook_binding_e2e.test.ts  install.test.ts  install_both.test.ts  install_e2e.test.ts  install_hook_mode.test.ts  install_oc.test.ts  install_oc_e2e.test.ts  install_oc_plugin.test.ts  integration_dispatch_collect.test.ts  integration_dry_run.test.ts  oc_plugin.test.ts  package.json  path_match.test.ts  post_task_collect.test.ts  probe_and_gate.test.ts  publish_contract.test.ts  runs_worktree.test.ts  task_plan_diag.test.ts  worktree_marker.test.ts  worktree_prompt_contract.test.ts  yaml_diag.test.ts
(+115 files in other folders)
