[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering"
version = "0.1.0"
description = "Collaborative Loop Engineering harness — schema, state machine, scheduling, checklists, dispatch."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
loop-eng = "loop_engineering.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loop_engineering*"]

[tool.setuptools.package-data]
loop_engineering = [
    "settings.json",
    "agents/*.md",
    "skills/loop-engineering/*.md",
    "hooks/loop_engineering/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
