[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering"
version = "0.1.0"
description = "[DEPRECATED, 共存期] Collaborative Loop Engineering harness (Python 算法 SSOT)。迁移目标是 TS SSOT (packages/ssot-ts, 发布为 npm @e2e-loop/ssot); 本 Python 包在共存期保留作等价测试锚点 (行为权威), 计划在 1.0.0 移除。"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
loop-eng = "loop_engineering.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loop_engineering*"]

[tool.setuptools.package-data]
loop_engineering = [
    "settings.json",
    "hooks/loop_engineering/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
